update environment/dev/*